--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "firebase": "^12.1.0",
+    "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
+    "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1"
   },
   "devDependencies": {
