--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
-# Environment variables
+﻿# Frontend Environment Variables for Campus Crush
+
+# Firebase Configuration
+REACT_APP_FIREBASE_API_KEY=AIzaSyDwJw1MSdCCcBpI9Lgxtpyx9kjqcaEluCs
+REACT_APP_FIREBASE_AUTH_DOMAIN=campuscrush-b22.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=campuscrush-b22
+REACT_APP_FIREBASE_STORAGE_BUCKET=campuscrush-b22.firebasestorage.app
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=480694292931
+REACT_APP_FIREBASE_APP_ID=1:480694292931:web:83594ed1d4ef713197ad76
