--- a/.env
+++ b/.env
@@ -1,11 +1,9 @@
-# Firebase Configuration for Campus Crush
-REACT_APP_FIREBASE_API_KEY=your-firebase-api-key-here
-REACT_APP_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=your-project-id
-REACT_APP_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
-REACT_APP_FIREBASE_APP_ID=your-app-id
-
-# App Configuration
+﻿REACT_APP_FIREBASE_API_KEY=AIzaSyDwJw1MSdCCcBpI9Lgxtpyx9kjqcaEluCs
+REACT_APP_FIREBASE_AUTH_DOMAIN=campuscrush-b22.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=campuscrush-b22
+REACT_APP_FIREBASE_STORAGE_BUCKET=campuscrush-b22.firebasestorage.app
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=480694292931
+REACT_APP_FIREBASE_APP_ID=1:480694292931:web:83594ed1d4ef713197ad76
+REACT_APP_API_URL=http://localhost:5000/api
 REACT_APP_UNIVERSITY_DOMAIN=uom.lk
 REACT_APP_APP_NAME=Campus Crush
