--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "firebase": "^12.1.0",
     "lottie-react": "^2.4.1",
     "react": "^18.2.0",
